Initial looks change

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,11 +6,11 @@ import InfoIcon from "../components/icons/InfoIcon.astro";
 
 <header class="py-8 px-44 mx-auto max-w-xl lg:py-16 lg:px-6">
     <div class="mx-auto text-center mb-8 lg:mb-16">
-        <h1 class="mb-4 text-5xl tracking-tight font-extrabold text-white">
-            My astro test
+        <h1 class="mb-4 text-5xl tracking-tight font-extrabold">
+            Trincasake
         </h1>
-        <p class="font-light text-gray-500 sm:text-xl dark:text-gray-400">
-            Just messing around
+        <p class="font-light text-gray-800 sm:text-xl">
+            Just some food
         </p>
         <nav
             class="flex flex-col items-center justify-between w-full text-center md:flex-row"
