--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,8 @@
 ---
 import Layout from "../layouts/Layout.astro";
-import Launches from "../components/Launches.astro";
+import Places from "../components/Places.astro";
 ---
 
 <Layout title="Trincasake">
-    <Launches />
+    <Places />
 </Layout>
