--- a/src/components/PlaceCard.astro
+++ b/src/components/PlaceCard.astro
@@ -11,6 +11,7 @@ const { id, img, success, flightNumber, details } = Astro.props;
 const successText = success ? "Éxito" : "Fracaso";
 ---
 
+<!--
 <a
     href={`/launch/${id}`}
     class="rounded-lg border shadow-md bg-gray-800 border-gray-700 hover:scale-105 hover:bg-gray-700 hover:border-gray-500 transition flex flex-col"
@@ -44,4 +45,20 @@ const successText = success ? "Éxito" : "Fracaso";
             }
         </p>
     </header>
-</a>
+</a>-->
+
+<div class="max-w-sm w-full lg:max-w-full lg:flex">
+    <div class="h-48 lg:h-auto lg:w-48 flex-none bg-cover rounded-l-2xl text-center overflow-hidden" style="background-image: url('/src/assets/ramen.jpg')" title="Ramen Bowl">
+    </div>
+    <div class="border-r border-b border-l border-gray-400 lg:border-l-0 lg:border-t lg:border-gray-400 bg-white rounded-r-2xl p-4 flex flex-col justify-between leading-normal">
+        <div class="mb-8">
+            <div class="text-gray-900 font-bold text-xl mb-2">Random Ramen Place</div>
+            <p class="text-gray-700 text-base">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Voluptatibus quia, nulla! Maiores et perferendis eaque, exercitationem praesentium nihil.</p>
+        </div>
+        <div class="px-6 pt-4 pb-2">
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#ramen</span>
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#osaka</span>
+            <span class="inline-block bg-gray-200 rounded-full px-3 py-1 text-sm font-semibold text-gray-700 mr-2 mb-2">#cheap</span>
+        </div>
+    </div>
+</div>
