--- a/src/components/Places.astro
+++ b/src/components/Places.astro
@@ -1,14 +1,14 @@
 ---
-import LaunchCard from "../components/LaunchCard.astro";
+import PlaceCard from "./PlaceCard.astro";
 import { getLatestLaunches } from "../services/spacex";
 
 const launches = await getLatestLaunches();
 ---
 
-<div class="grid gap-8 sm:grid-cols-2 lg:grid-cols-3">
+<div class="grid gap-8 sm:grid-cols-1 lg:grid-cols-1">
     {
         launches.map((launch) => (
-            <LaunchCard
+            <PlaceCard
                 id={launch.id}
                 img={launch.links.patch.small}
                 details={launch.details}
