--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from "../components/Header.astro";
+import Sidebar from "../components/Sidebar.astro";
 import { ViewTransitions } from "astro:transitions";
 
 interface Props {
@@ -15,15 +16,22 @@ const { title } = Astro.props;
         <meta charset="UTF-8" />
         <meta name="description" content="Astro description" />
         <meta name="viewport" content="width=device-width" />
-        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+        <link rel="icon" type="image/svg+xml" href="/src/assets/favicon.svg" />
         <meta name="generator" content={Astro.generator} />
         <title>{title}</title>
         <ViewTransitions />
     </head>
-    <body class="bg-gray-900 min-h-screen pb-32">
+    <body class="bg-red-200 min-h-screen pb-32">
         <Header />
-        <main class="max-w-5xl px-4 m-auto">
-            <slot />
+        <main class="max-w-6xl px-4 m-auto">
+            <div class="grid grid-cols-4 gap-4">
+                <div class="col-span-1">
+                    <Sidebar />
+                </div>
+                <div class="col-span-3">
+                    <slot />
+                </div>
+            </div>
         </main>
     </body>
 </html>
