--- a/src/components/Places.astro
+++ b/src/components/Places.astro
@@ -23,7 +23,7 @@ const places = await db.select().from(Place);
                 country = {place.country},
                 tags = {place.tags},
                 video = {place.video},
-                needsReservation = {place.needsReservation}
+                needsReserve = {place.needsReserve}
             />
         ))
     }
